added my name to authors

--- a/Portfolio-main.tex
+++ b/Portfolio-main.tex
@@ -41,7 +41,9 @@
 	\and 
 		Ivan Karev \texttt{00092432}
 	\and 
-		Dezső-Dániel Bartha \texttt{00092909 }
+		Dezső-Dániel Bartha \texttt{00092909}
+	\and
+		Damyan Dimitrov \texttt{00093641}
 	}
 	\date{\parbox{\linewidth}{\centering%
 			\today\endgraf\bigskip
