added basic template

--- a/Portfolio-main.tex
+++ b/Portfolio-main.tex
@@ -64,8 +64,15 @@
 	\newpage
 	\pagenumbering{arabic}
 	
-	
 	\include{Introduction}
+	
+	\include{Background}
+	
+	\include{Problem_and_goals}
+	
+	\include{Learning_Outcomes}
+	
+	\include{Timeline}
 	
 	\appendix
 	
