--- a/Problem_and_goals.tex
+++ b/Problem_and_goals.tex
@@ -6,4 +6,4 @@
 
 The project aims to create a reliable solution that abolishes the current system of compiling information through excel sheets. 
 
-The main focus will be to create an intuitive application that boasts a comprehensive UI that aims to streamline the process of compiling information for the analysts and data engineers of the Strategic Knowledge Center of Undermining Crime.
+The main focus will be to create an intuitive application that boasts a comprehensive user interface that aims to streamline the process of compiling information for the analysts and data engineers of the Strategic Knowledge Center of Undermining Crime.
