added problem section

--- a/Problem_and_goals.tex
+++ b/Problem_and_goals.tex
@@ -1,7 +1,17 @@
 \section{Problem and goals}
 \label{sec:Problem-and-goals}
 
+This chapter is going to describe problem that the company is facing and why is that so. Chapter will continue with proposition of how this problem can be solved. 
+
+\subsection{Problem}
+\label{subsec:Problem}
+The company’s employees are collecting information from various publicly available documents, which are processed through two routes.
+
+In the first route, metadata and information such as author, publication year, and other details are processed, collected, and stored through internal software. This tool uses large language models to generate insights about the documents, which are then stored in the internal database. However, the tool is still under active development and is not yet fully utilized.
+
+The second route involves the manual intake of documents. In this process, analysts use an Excel spreadsheet to write short subjective summaries of the documents. While the spreadsheet is well organized, the growing number of processed documents makes it increasingly difficult to search for specific phrases and trace them back to the original documents.
+
+According to the project’s main stakeholders, navigating complex Excel tables has become time-consuming and error-prone. Therefore, developing a coherent online tool would greatly benefit the organization.
+
 \subsection{Project and solution}
 \label{subsec:Project-or-Solution}
-
-somethign 	
