--- a/Background.tex
+++ b/Background.tex
@@ -5,11 +5,13 @@
 \label{subsec:Organization}
 
 \subsubsection{The Launch of a Unique Knowledge Center}
+\label{subsubsec:SKC-launch}
 Many organizations have long been dedicated to an integrated approach to combating undermining. Each, drawing on its own expertise, possesses valuable knowledge and data. The real strength lies in combining this knowledge and data, which offers opportunities to gain deep, new, and supplementary insights. The Strategic Knowledge Center on Undermining Crime (SKC) was established precisely for this purpose.
 
 The purpose of the SKC is to gather and interpret information and knowledge for a problem-oriented approach to combating undermining by organized crime, in order to prevent social disruption. With this goal, and thanks to its analytical expertise and connecting capacity, the SKC aims to make the Netherlands more aware, safer, and more resilient.
 
 \subsubsection{The SKC within J\&V: Independent and Policy-Neutral Analyses}
+\label{subsubsec:SKC-JV}
 The SKC, based in Vlissingen, is part of the Ministry of Justice and Security, with the Directorate-General for Undermining (DGO) as the coordinating client. The SKC produces independent analytical products on the undermining activities of organized crime. 
 
 These products are policy-neutral: they do not contain advice or recommendations, nor do they evaluate existing policies. SKC publications are intended for officials involved in strategy and policy development for the integrated approach to combating undermining.
@@ -18,6 +20,7 @@ These products are policy-neutral: they do not contain advice or recommendations
 \label{subsec:Products}
 
 \subsubsection{Ambition and Composition of the SKC}
+\label{subsubsec:Ambition-and-composition}
 The SKC delivers leading analytical products on the undermining activities of organized crime. It creates distinctive value by:
 \begin{itemize}
 	\item providing strategic insights,
@@ -33,6 +36,7 @@ Key partners include: Clingendael, Insight Crime, Global Initiative, The Hague C
 Analytical products at the SKC are created by a multidisciplinary team of researchers, analysts, data scientists, strategic advisors, communication and visualization specialists, and liaisons from partner organizations (Public Prosecution Service, Police, Royal Netherlands Marechaussee, Customs, Tax Authorities, and FIOD). To maximize the team’s effectiveness, the SKC fosters a progressive, positive, and innovative culture.w
 
 \subsubsection{Core and Additional Research}
+\label{subsubsec:Core-and-additional-research}
 In addition to the DON (National Threat Assessment on Undermining Crime), the SKC conducts other research in the form of international and thematic studies. These studies also serve as input for the core product, the DON.
 
 The first two thematic studies focus on:
@@ -48,6 +52,7 @@ The SKC has already completed and published the \emph{Transatlantic} and \emph{E
 Annual updates of these international studies are based on the monitoring of information, data, and knowledge sources using data science. This approach is exemplified by the first SKC update that has already been published: \emph{A Strategic View on the Dynamics of the International Drug Market}.
 
 \subsubsection{SKC Publications}
+\label{subsubsec:SKC-publications}
 The DON, international studies, and thematic studies are compiled from publicly available sources. The SKC’s approach is to bring together current, expert, and reliable insights that contribute to a comprehensive and dynamic understanding of undermining by organized crime.
 
 When preparing the DON:
