--- a/Learning_Outcomes.tex
+++ b/Learning_Outcomes.tex
@@ -7,6 +7,17 @@
 \subsection{Available solutions}
 \label{subsec:Available solutions}
 
+It was mentioned by the SKC clients that an initial proof of concept had been already created toward the solution. Creative liberty has been given in terms of development with the exception being that the product needs to adhere to the current technology stack for the purpose of efficient integration.
+
+It was discussed that access to the technology stack should be given to current developers of the team, after proper precautions have been taken toward data protection. The aforementioned technology stack includes a Microsoft Azure environment and API's through the programming language Python. Additionally, the product should leverage the Svelte software framework for reasons mentioned at the beginning of this section.
+
+A general consensus was reached within the team in regards to available solutions. The initial idea was to create a node based system for visualizing the information gathered by SKC. The solution's main focus was to streamline data processing and improve visualization of data. Therefore, the proposed solution would enable users to visualize the relations between stacks of information which would in term improve the process of compiling data into the final document that would be received by government officials.
+
+In order to acquire feedback from the clients a design was created in Figma, including a representation of the above mentioned node based system. In addition, the proposed solution included a list of all information contained in the database, coupled with a search functionality for the purpose of finding information quickly and effectively.
+
+The proposed usage pipeline of the solution consisted of listing the readily available processed data and relating metadata on selection, displaying said data in a node, as well as all other nodes that would have some form of connection to the selected data.
+
+
 \subsection{Proposed solution}
 \label{subsec:Proposed solution}
 
