added analysis chapter

--- a/Learning_Outcomes.tex
+++ b/Learning_Outcomes.tex
@@ -4,6 +4,20 @@
 \subsection{Analysis}
 \label{subsec:Analysis}
 
+The first step in creating a useful tool for the company is to define both functional and non-functional requirements since they will shape the direction of the project from very beginning. Those requirements will be outcome of the analysis process specified in this process. 
+
+First and foremost, the target audience and key stakeholders will be identified. Without this step, it would be difficult to narrow the focus to a specific group of people, which would make the requirements too broad and make their validation much harder. Key stakeholders will be mainly used for t
+
+Once the target audience is known, initial interviews with selected individuals will be conducted. The aim of these interviews is to gain a better understanding of the bottlenecks and hurdles in the current process that this project is intended to address. The interviews will be structured, meaning that selected candidates will receive a list of questions in advance to ensure that all questions are fully answered. To better evaluate the responses, the interviews will be recorded (with the interviewee’s consent). After the initial interviews are analyzed, a list of requirements will be compiled and validated with the key stakeholders of the project.
+
+While interviews will help identify the most obvious requirements, some may still be missed if interviewees are not fully prepared. To address this, an observation method will also be used, where two team members will observe the process that the product is meant to assist and take notes. Additional requirements identified this way will also be validated with key stakeholders.
+
+Since there is an in-house application that has been tested but is not yet fully utilized, interviews with its developers will be conducted to clarify how the new product should integrate with the existing system. The conclusions from these interviews will mainly affect the functional requirements created earlier.
+
+Based on the steps above, a list of functional and non-functional requirements will be created. This list will then be reviewed by the team and categorized according to the estimated size and complexity of each requirement.
+
+ 
+
 \subsection{Available solutions}
 \label{subsec:Available solutions}
 
