--- a/Learning_Outcomes.tex
+++ b/Learning_Outcomes.tex
@@ -16,7 +16,7 @@ Since there is an in-house application that has been tested but is not yet fully
 
 Based on the steps above, a list of functional and non-functional requirements will be created. This list will then be reviewed by the team and categorized according to the estimated size and complexity of each requirement. As a final step, the platform that will host these requirements will be chosen for better organization and progress tracking.
 
-Finally, a paper prototype with wireframes will be created to represent the most important requirements from the requirements list. This paper prototype will serve as the final validation step, ensuring that the gathered functional and non-functional requirements are aligned with the client’s interests. 
+Finally, a paper prototype with wireframes will be created to represent the most important requirements from the requirements list. This paper prototype will serve as the final step of analysis, ensuring that the gathered functional and non-functional requirements are aligned with the client’s interests. 
 
 
  
