--- a/Learning_Outcomes.tex
+++ b/Learning_Outcomes.tex
@@ -37,6 +37,17 @@ The proposed usage pipeline of the solution consisted of listing the readily ava
 
 \subsection{Proposed solution}
 \label{subsec:Proposed solution}
+As mentioned above, the proposed solution involves the creation of a node based visualizer which will help our client's work process by eliminating the complexity of working on multiple fronts with different files and formats by bringing all the information together into one application that summarizes all the data they would need and require.
+
+To make out project a reality, first we will establish a development environment with all the required tools. The tools, frameworks and technology used will be based on the client's requirements, their compatibility with existing software and systems, and the tools' availability due to funding. Setting up this environment will ensure that future tasks such as coding and testing can be carried out efficiently without unnecessary problems.
+
+The code written will be structured, formatted and easy to read, following best practices to ensure maintainability, and transferability for future development. Version control will be handled in GitHub by using the GitFlow branching model. Code quality will be upheld through reviews upon every merge request.
+
+After implementation, testing will be done to verify the reliability and quality of the application. Tests will be performed to evaluate the application's functionality and performance. Each test will produce repeatable results, which will be noted and analyzed to gain insight into the overall quality of our application. The outcomes of these tests will be documented.
+
+The development environment will be considered done when it allows the development team to perform their core tasks such as writing code. Code quality will be assessed based on structure, readability, documentation and its adherence to good practices and project requirements. The effectiveness of testing will be confirmed by the repeatability and accuracy of results along with documented observations of issues identified and resolved during the process.
+
+The environment setup will be done within the initial phase of the project as it is essential for our work. Implementation of our solution and testing will continue throughout the rest of the project. By the end, evidence of success will include a working development environment, documented code, structured and executed tests and their noted results.
 
 \subsection{Advice}
 \label{subsec:Advice}
