Created the template for the section and added the initial information

--- a/Learning_Outcomes.tex
+++ b/Learning_Outcomes.tex
@@ -13,3 +13,22 @@
 \subsection{Advice}
 \label{subsec:Advice}
 
+\textbf{LO4:} You can give a suitable advice for solving a Software Engineering Design Problem. \\
+
+Documentation is crucial for proper understanding and transfer of the product. The team will provide the client with complete and concise documentation through GitHub. We will also create a separate advisory report that is centered around key aspects of the problem, as well as possible follow-up steps. \\
+
+\textbf{Goal:} Our objective for this learning outcome is to provide clear, effective, well-founded advice for our client.\\
+
+\begin{tabular}{ |c|c|c| } 
+	\hline
+	Specific & description  \\ 
+	Measurable & description  \\ 
+	Acceptable & description  \\
+	Realistic & description \\
+	Time-Bound & description \\ 
+	\hline
+\end{tabular} \\
+
+\textbf{Evidence:}
+An advisory report. This document will contain our advice on the problem, together with recommended next steps. 
+
