We will use MkDocs for docs and not github

--- a/Learning_Outcomes.tex
+++ b/Learning_Outcomes.tex
@@ -43,7 +43,7 @@ The proposed usage pipeline of the solution consisted of listing the readily ava
 
 \textbf{LO4:} You can give a suitable advice for solving a Software Engineering Design Problem. \\
 
-Documentation is crucial for proper understanding and transfer of the product. The team will provide the client with complete and concise documentation through GitHub. We will also create a separate advisory report that is centered around key aspects of the problem, as well as possible follow-up steps. \\
+Documentation is crucial for proper understanding and transfer of the product. The team will provide the client with complete and concise documentation through MkDocs. We will also create a separate advisory report that is centered around key aspects of the problem, as well as possible follow-up steps. \\
 
 \textbf{Goal:} Our objective for this learning outcome is to provide clear, effective, well-founded advice for our client.\\
 
